<resources>
    <string name="app_name">SeptemberWorkout</string>
    <string name="date_text">Date:</string>
    <string name="reps_count_text">Repeats number:</string>
    <string name="record_weight_text">Weight:</string>
    <string name="kg">kg</string>
    <string name="save">Save</string>
    <string name="pull_ups">Pulling-ups</string>
    <string name="push_ups">Pushing_ups</string>
    <string name="squats">Squatting</string>
    <string name="share_btn_text">Share</string>
    <string name="record_subject_string">New record in pulling up</string>
    <string name="record_message">The current record in pulling up - %d reps with a weight of %d kg</string>
    <string name="send_exception_message">No programs found to send a message</string>
    <string name="result_of_calling_details">Result of calling details...</string>
    <string name="settings">Settings</string>
    <string name="quit">Quit</string>
    <string name="title_mock_text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minus, perspiciatis.</string>
    <string name="description_mock_text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores atque autem, dolore nam nisi officia placeat saepe sit tempora tempore. Ad alias consequatur ducimus fuga in quas quo quod voluptas!</string>
    <string name="record_is_documented">record is documented</string>
    <string name="record_paid">record paid</string>
    <string name="layout_list_add_record_button">add new record</string>
</resources>
