<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.WorkoutDetailActivity">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/workout_detail_title"
            android:layout_width="match_parent"
            android:text="Название приложения"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold"
            android:maxLines="2"
            android:ellipsize="end"
            android:layout_height="wrap_content" />
        <ImageView
            android:id="@+id/workout_detail_image_view"
            android:layout_marginTop="8dp"
            android:background="@color/colorPrimaryDark"
            android:layout_gravity="center"
            android:layout_width="320dp"
            android:layout_height="240dp" />
        <LinearLayout
            android:orientation="vertical"
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:text="Рекорды"
                android:layout_height="wrap_content" />
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:text="@string/date_text"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/workout_detail_record_date"
                    android:layout_marginLeft="4dp"
                    android:layout_width="wrap_content"
                    android:text="12.12.2012"
                    android:layout_height="wrap_content" />

            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:text="@string/reps_count_text"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/workout_detail_record_reps_count"
                    android:layout_marginLeft="4dp"
                    android:layout_width="wrap_content"
                    android:text="123"
                    android:layout_height="wrap_content" />

            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:text="@string/record_weight_text"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/workout_detail_record_weight"
                    android:layout_width="wrap_content"
                    android:text="120"
                    android:layout_marginLeft="4dp"
                    android:layout_height="wrap_content" />
                <TextView
                    android:layout_width="wrap_content"
                    android:text="@string/kg"
                    android:layout_marginLeft="4dp"
                    android:layout_height="wrap_content" />

            </LinearLayout>
            <Button
                android:id="@+id/workout_detail_share"
                android:text="@string/share_btn_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_share_black_24dp"
                android:drawablePadding="4sp"
                />
            <LinearLayout
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:text="@string/record_weight_text"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/workout_detail_weight"
                    android:layout_width="wrap_content"
                    android:text="0"
                    android:layout_marginLeft="4dp"
                    android:layout_height="wrap_content"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:text="@string/kg"
                    android:layout_marginLeft="4dp"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <SeekBar
                    android:id="@+id/workout_detail_weight_seek_bar"
                    android:layout_marginTop="4dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>
            <LinearLayout
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/workout_detail_reps_count_edit_text"
                    android:layout_width="match_parent"
                    android:hint="@string/reps_count_text"
                    android:inputType="numberDecimal"
                    android:layout_height="wrap_content" />

            </LinearLayout>
            <Button
                android:id="@+id/workout_detail_save_button"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:text="@string/save"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/workout_detail_description"
                android:text="Это длинный текст."
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />

        </LinearLayout>

    </LinearLayout>



</ScrollView>