<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_height="wrap_content" android:layout_width="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="16dp"
    android:layout_marginTop="8dp"
    android:layout_marginRight="16dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/list_item_more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="4dp"
            android:layout_marginRight="4dp"
            android:src="@drawable/ic_more" />

        <ImageView
            android:id="@+id/list_item_image_view"
            android:layout_width="95dp"
            android:layout_height="95dp"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="4dp"
            android:background="@color/colorGray" />

        <TextView
            android:textColor="@color/colorPrimaryDark"
            android:id="@+id/list_item_title_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginRight="4dp"
            android:layout_toLeftOf="@id/list_item_more"
            android:layout_toRightOf="@+id/list_item_image_view"
            android:ellipsize="end"
            android:maxLines="2"
            android:text="@string/title_mock_text"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/list_item_description_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/list_item_title_text_view"
            android:layout_marginTop="4dp"
            android:layout_toRightOf="@id/list_item_image_view"
            android:ellipsize="end"
            android:maxLines="3"
            android:text="@string/description_mock_text" />

        <View
            android:id="@+id/list_item_horizontal_separator"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_below="@id/list_item_description_text_view"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="6dp"
            android:layout_marginRight="8dp"
            android:background="@color/colorAccent">

        </View>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/list_item_horizontal_separator"
            android:layout_marginTop="4dp"
            android:orientation="horizontal">

            <LinearLayout
                style="@style/RecordLinearLayout">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_weight" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="30 кг" />
            </LinearLayout>

            <LinearLayout
                style="@style/RecordLinearLayout">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_counter" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="25 раз" />

            </LinearLayout>

            <LinearLayout
                style="@style/RecordLinearLayout">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_calendar" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="12.12.2012" />

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

    </android.support.v7.widget.CardView>

    <CheckBox
        android:layout_marginTop="4dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:id="@+id/list_item_checkbox1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/record_is_documented"
        />

    <CheckBox
        android:layout_marginTop="4dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:id="@+id/list_item_checkbox2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/record_paid"
         />

</LinearLayout>